# llmasp

./: PYPIREADME.md  README.md  pyproject.toml
llmasp/: __init__.py  main.py
llmasp/asp/: Solver.py  __init__.py  solver.py
llmasp/examples/: __init__.py  marketplace.py
llmasp/llm/: AbstractLLMASP.py  LLMASP.py  LLMHandler.py  __init__.py  abstract_llmasp.py  llm_handler.py  llmasp.py
llmasp/specifications/: application_logistics.yml  application_marketplace.yml  behavior_translator.yml  behavior_translator_v2.yml  behaviors.yml  db.yml  marketplace.yml
tests/: test_llmasp.py
