[tool.poetry]
name = "llmasp"
version = "0.1.8"
description = "Combining LLMs and ASP for intelligent problem-solving and reasoning."
authors = ["Luis Angel <luis.rodriguezreiners@gmail.com>", "Mario Alviano <mario.alviano@gmail.com>"]
readme = "PYPIREADME.md"

exclude = ["llmasp/examples/**", "llmasp/specifications/**", "llmasp/main.py"]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.35.5"
pyyaml = "^6.0.1"
dumbo-asp = "^0.3.8"

[tool.poetry.scripts]
llmasp = "llmasp.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
